--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,3 +91,16 @@ body {
     margin: auto;
     margin-bottom: 2rem;
 }
+
+h3 {
+    font-family: "Inria Serif";
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: justify;
+    line-height: 1.5rem;
+    width: 72ch;
+    margin: auto;
+    padding-bottom: 1rem;
+    margin-top: 1rem;
+}
