--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,13 +93,13 @@ body {
 }
 
 h3 {
-    font-family: "Inria Serif";
+    font-family: "Inria Sans";
+    font-size: 1.25rem;
+    padding-left: 14rem;
     display: block;
     font-size: 16px;
     font-weight: bold;
-    text-align: justify;
     line-height: 1.5rem;
-    width: 72ch;
     margin: auto;
     padding-bottom: 1rem;
     margin-top: 1rem;
